Add drag region

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>appear.in</title>
     <style>
+      html {
+        -webkit-app-region: drag;
+      }
+
       body {
         margin: 0;
         height: 100vh;
